tests: add smoke, ajax profiler subscriber and transcript happy path test

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -23,10 +23,13 @@
                         <p class="card-text">Retrieval Augmented Generation based on Symfony's blog dumped to a vector store.</p>
                         <a href="{{ path('rag') }}" class="btn btn-outline-dark d-block">Try RAG Chat Bot</a>
                     </div>
-                    <div class="card-footer">
-                        {{ ux_icon('solar:code-linear', { height: '20px', width: '20px' }) }}
-                        <a href="{{ path('_profiler_open_file', { file: 'src/Chat/Rag.php', line: 14 }) }}">See Implementation</a>
-                    </div>
+                    {# Profiler route only available in dev #}
+                    {% if 'dev' == app.environment %}
+                        <div class="card-footer">
+                            {{ ux_icon('solar:code-linear', { height: '20px', width: '20px' }) }}
+                            <a href="{{ path('_profiler_open_file', { file: 'src/Chat/Rag.php', line: 14 }) }}">See Implementation</a>
+                        </div>
+                    {% endif %}
                 </div>
             </div>
             <div class="col-md-4">
@@ -39,10 +42,13 @@
                         <p class="card-text">Question answering initialized with transcript of YouTube video.</p>
                         <a href="{{ path('youtube') }}" class="btn btn-outline-dark d-block">Try YouTube Transcript Bot</a>
                     </div>
-                    <div class="card-footer">
-                        {{ ux_icon('solar:code-linear', { height: '20px', width: '20px' }) }}
-                        <a href="{{ path('_profiler_open_file', { file: 'src/Chat/YouTube.php', line: 15 }) }}">See Implementation</a>
-                    </div>
+                    {# Profiler route only available in dev #}
+                    {% if 'dev' == app.environment %}
+                        <div class="card-footer">
+                            {{ ux_icon('solar:code-linear', { height: '20px', width: '20px' }) }}
+                            <a href="{{ path('_profiler_open_file', { file: 'src/Chat/YouTube.php', line: 15 }) }}">See Implementation</a>
+                        </div>
+                    {% endif %}
                 </div>
             </div>
             <div class="col-md-4">
@@ -55,10 +61,13 @@
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         <a href="{{ path('wikipedia') }}" class="btn btn-outline-dark d-block">Try Wikipedia Research Bot</a>
                     </div>
-                    <div class="card-footer">
-                        {{ ux_icon('solar:code-linear', { height: '20px', width: '20px' }) }}
-                        <a href="{{ path('_profiler_open_file', { file: 'src/Chat/Wikipedia.php', line: 14 }) }}">See Implementation</a>
-                    </div>
+                    {# Profiler route only available in dev #}
+                    {% if 'dev' == app.environment %}
+                        <div class="card-footer">
+                            {{ ux_icon('solar:code-linear', { height: '20px', width: '20px' }) }}
+                            <a href="{{ path('_profiler_open_file', { file: 'src/Chat/Wikipedia.php', line: 14 }) }}">See Implementation</a>
+                        </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
