--- a/demo/templates/base.html.twig
+++ b/demo/templates/base.html.twig
@@ -21,7 +21,7 @@
                     <strong>Symfony AI</strong> Demo
                 </a>
                 <div class="collapse navbar-collapse">
-                    <ul class="navbar-nav ms-auto me-2 mb-0">
+                    <ul class="navbar-nav ms-auto me-2 mb-0 small">
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('blog') }}">{{ ux_icon('mdi:symfony', { height: '20px', width: '20px' }) }} Symfony Blog Bot</a>
                         </li>
@@ -36,6 +36,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('video') }}">{{ ux_icon('tabler:video-filled', { height: '20px', width: '20px' }) }} Video Bot</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('stream') }}">{{ ux_icon('mdi:car-turbocharger', { height: '20px', width: '20px' }) }} Turbo Stream Bot</a>
                         </li>
                         <li class="nav-item"><span class="nav-link">|</span></li>
                         <li class="nav-item">
