Add smart cropping example to demo

--- a/demo/templates/base.html.twig
+++ b/demo/templates/base.html.twig
@@ -32,6 +32,9 @@
                             <a class="nav-link" href="{{ path('wikipedia') }}">{{ ux_icon('mdi:wikipedia', { height: '20px', width: '20px' }) }} Wikipedia Research</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="{{ path('crop') }}">{{ ux_icon('material-symbols:crop', { height: '20px', width: '20px' }) }} Smart Crop</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{{ path('audio') }}">{{ ux_icon('iconoir:microphone-solid', { height: '20px', width: '20px' }) }} Audio</a>
                         </li>
                         <li class="nav-item">
